--- a/css/style.css
+++ b/css/style.css
@@ -11,20 +11,20 @@
     width: 50em;
     height: 35em;
     margin: 1em;
-    background-color: rgba(178, 49, 49, 0.854);
+    background-color: orangered;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 .first{
     position: relative;
-    width: 50vw;
-    height: 50vh;
+    width: 45em;
+    height: 35em;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: brown; */
-}
+    background-color: brown;
+} 
 .imagen {
     height: auto;
     width: auto;
@@ -37,35 +37,23 @@
 }
 .second{
     position: relative;
-    width: 50vw;
-    height: 50vh;
+    width: 45em;
+    height: 35em;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: green; */
-}
+    background-color: green;
+} 
 .third{
     position: relative;
-    width: 50vw;
-    height: 50vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: grey; */
-}
-
-
-
-
-.container1{
-    width: 50em;
+    width: 45em;
     height: 35em;
-    background-color: aqua;
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
-}
+    background-color: grey;
+} 
+
 .carrito{
     position: relative;
     width: 20em;
@@ -75,7 +63,7 @@
     align-items: center;
     background-color: green;
 
-}
+} 
 .contador{
     width: 21em;
     height: 12em;
@@ -85,19 +73,19 @@
     flex-direction: column;
     align-items: center;
 }
-.imagen1 {
-    height: 10em;
+.imagen1 { 
+     height: 10em;
     width: 10em;
     /* max-width: 100px;
     max-height: 100px; */
-    margin: 10px;
-    object-fit: cover;
-    border: 0.2em solid black;
-    box-shadow: 2px 2px 5px #999;
-}
+margin: 10px; */
+     object-fit: cover; */
+     border: 0.2em solid black; */
+     box-shadow: 2px 2px 5px #999; */
+}  
 
-.pum {
-    width: 21em;
+.pum { 
+     width: 21em;
     height: 12em;
     display: flex;
     justify-content: center;
@@ -106,7 +94,7 @@
     padding: 1em;
     /* background-color: blueviolet; */
 
-}
+ }
 .button{
     text-decoration: none;
     font-weight: 600;
@@ -117,7 +105,46 @@
     padding-left: 20px;
     padding-right: 20px;
     /* background-color: aqua; */
-    border-right: 3px;
-    border-style: solid;
+    /* border-right: 3px; */
+    /* border-style: solid; */
     /* border-radius: 35px; */
+} 
+
+.imagenDisplay{
+    height: 10em;
+    border: 0.2em solid black;
+}
+.container1{
+    width: 40em;
+    height: 35em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.carrito{
+    height: 20em;
+    width: 15em;
+}
+.carritoActual{
+    height: 17em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.totalPrice{
+    height: 30em;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pictures{
+    height: 10em;
+}
+.contenedorItem{
+    width: 14em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
