--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
     flex-direction: row;
 }
 .container{
-    width: 50em;
-    height: 35em;
+    width: 60em;
+    height: 55em;
     margin: 1em;
     background-color: orangered;
     display: flex;
@@ -18,7 +18,7 @@
 }
 .first{
     position: relative;
-    width: 45em;
+    width: 60em;
     height: 35em;
     display: flex;
     justify-content: center;
@@ -37,7 +37,7 @@
 }
 .second{
     position: relative;
-    width: 45em;
+    width: 60em;
     height: 35em;
     display: flex;
     justify-content: center;
@@ -46,7 +46,7 @@
 } 
 .third{
     position: relative;
-    width: 45em;
+    width: 60em;
     height: 35em;
     display: flex;
     justify-content: center;
@@ -55,46 +55,27 @@
 } 
 
 .carrito{
-    position: relative;
-    width: 20em;
-    height: 10em;
+    /* position: relative; */
+    width: 30em;
+    height: 20em;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: green;
 
 } 
-.contador{
-    width: 21em;
-    height: 12em;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-.imagen1 { 
-     height: 10em;
-    width: 10em;
+
+/* .imagen1 { 
+     height: 20em;
+    width: 20em;
     /* max-width: 100px;
     max-height: 100px; */
-margin: 10px; */
-     object-fit: cover; */
-     border: 0.2em solid black; */
-     box-shadow: 2px 2px 5px #999; */
-}  
+     /* margin: 10px;
+     object-fit: cover; 
+     border: 0.2em solid black; 
+     box-shadow: 2px 2px 5px #999;  */
+/* }    */
 
-.pum { 
-     width: 21em;
-    height: 12em;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: flex-end;
-    padding: 1em;
-    /* background-color: blueviolet; */
-
- }
 .button{
     text-decoration: none;
     font-weight: 600;
@@ -115,16 +96,20 @@ margin: 10px; */
     border: 0.2em solid black;
 }
 .container1{
-    width: 40em;
-    height: 35em;
+    width: 45em;
+    height: 55em;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: aquamarine;
 }
 .carrito{
     height: 20em;
     width: 15em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .carritoActual{
     height: 17em;
