--- a/css/style.css
+++ b/css/style.css
@@ -54,42 +54,10 @@
     background-color: grey;
 } 
 
-.carrito{
-    /* position: relative; */
-    width: 30em;
-    height: 20em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: green;
 
-} 
 
-/* .imagen1 { 
-     height: 20em;
-    width: 20em;
-    /* max-width: 100px;
-    max-height: 100px; */
-     /* margin: 10px;
-     object-fit: cover; 
-     border: 0.2em solid black; 
-     box-shadow: 2px 2px 5px #999;  */
-/* }    */
 
-.button{
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 1em;
-    color: black;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    /* background-color: aqua; */
-    /* border-right: 3px; */
-    /* border-style: solid; */
-    /* border-radius: 35px; */
-} 
+
 
 .imagenDisplay{
     height: 10em;
@@ -101,16 +69,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     background-color: aquamarine;
 }
-.carrito{
+/* .carrito{
     height: 20em;
     width: 15em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+    background-color: green;
+} */
 .carritoActual{
     height: 17em;
     display: flex;
@@ -118,14 +88,14 @@
     align-items: center;
 }
 .totalPrice{
-    height: 30em;
-    font-size: 2em;
+    height: 14em;
+    font-size: 10em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .pictures{
-    height: 10em;
+    height: 1em;
 }
 .contenedorItem{
     width: 14em;
