--- a/css/style.css
+++ b/css/style.css
@@ -72,15 +72,6 @@
     flex-direction: column;
     background-color: aquamarine;
 }
-/* .carrito{
-    height: 20em;
-    width: 15em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: green;
-} */
 .carritoActual{
     height: 17em;
     display: flex;
@@ -88,18 +79,46 @@
     align-items: center;
 }
 .totalPrice{
-    height: 14em;
-    font-size: 10em;
+    height: 3em;
+    width: 3em;
+    margin: 2em;
+    font-size: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background-color: blue; */
+   
 }
 .pictures{
-    height: 1em;
+    height: 20em;
+    margin-top: 15em;
 }
 .contenedorItem{
     width: 14em;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.contenedor2{
+    position: relative;
+    background-color: blue;
+    width: 3em;
+    height: 3em;
+}
+.button{
+    text-decoration:none;
+font-weight: 600;
+font-size: 20px;
+color:#ffffff;
+padding-top:15px;
+padding-bottom:15px;
+padding-left:40px;
+padding-right:40px;
+background-color:#f2595e;
+border-color: #F69DA1;
+border-width: 3px;
+border-style: solid;
+}
+.button:hover{
+    background-color: #000000;
 }
