--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,20 @@
     width: 60em;
     height: 55em;
     margin: 1em;
-    background-color: orangered;
+    background-color:#8a4807 ;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 .first{
     position: relative;
-    width: 60em;
+    width: 55em;
     height: 35em;
+    margin: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: brown;
+    background-color: whitesmoke;
 } 
 .imagen {
     height: auto;
@@ -32,26 +33,28 @@
     max-height: 100px;
     margin: 10px;
     object-fit: cover;
-    border: 0.2em solid black;
-    box-shadow: 2px 2px 5px #999;
+    /* border: 0.2em solid black;
+    box-shadow: 2px 2px 5px #999; */
 }
 .second{
     position: relative;
-    width: 60em;
+    width: 55em;
     height: 35em;
+    margin: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: green;
+    background-color: whitesmoke;
 } 
 .third{
     position: relative;
-    width: 60em;
+    width: 55em;
     height: 35em;
+    margin: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: grey;
+    background-color: whitesmoke;
 } 
 
 
