--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@
     height: 3em;
 }
 
-.button {
+/* .button {
     text-decoration: none;
     font-weight: 600;
     font-size: 20px;
@@ -143,4 +143,31 @@
 
 .button:hover {
     background-color: #000000;
+} */
+
+.boton {
+    height: 2.5em;
+    width: 8em;
+
+    background-color: blueviolet;
+
+    color: white;
+    font-weight: bold;
+
+    border-radius: 1em;
+
+    transition: 0.3s;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    cursor: pointer;
+}
+
+.boton:hover {
+
+    transition: 0.3s;
+
+    background-color: rgb(102, 0, 146);
 }
