--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,15 @@
 .first {
     position: relative;
     width: 54em;
-    height: 33em;
-    margin: 3em;
+    height: 30em;
+    margin: 2em;
+   margin-top: 5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
-    /* border-radius: 10px 10px 10px 10px;
--moz-border-radius: 10px 10px 10px 10px;
--webkit-border-radius: 10px 10px 10px 10px; */
-    border: 5px 5px 5px 5px inset tomato;
+    flex-direction: ç;
+    background-color: white;
+    border: 20px inset 	#CD853F;
 }
 
 .imagen {
@@ -47,13 +46,14 @@
 
 .second {
     position: relative;
-    width: 55em;
-    height: 35em;
-    margin: 3em;
+    width: 54em;
+    height: 32em;
+    margin: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    background-color: white;
+    border: 20px inset 	#CD853F;
 }
 
 .third {
@@ -64,7 +64,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    background-color: white;
+    border: 20px inset 	#CD853F;
 }
 
 
@@ -126,24 +127,6 @@
     height: 3em;
 }
 
-/* .button {
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 20px;
-    color: #ffffff;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 40px;
-    padding-right: 40px;
-    background-color: #f2595e;
-    border-color: #F69DA1;
-    border-width: 3px;
-    border-style: solid;
-}
-
-.button:hover {
-    background-color: #000000;
-} */
 
 .boton {
     height: 2.5em;
@@ -171,3 +154,4 @@
 
     background-color: rgb(102, 0, 146);
 }
+
